fix: reset tooltips text when loading a CRD form

--- a/stackgres-k8s/src/admin-ui/public/style.css
+++ b/stackgres-k8s/src/admin-ui/public/style.css
@@ -5051,6 +5051,10 @@ td.label .helpTooltip {
     font-weight: 300;
 }
 
+#helpTooltip br {
+    display: none;
+}
+
 /* Secret Toggle */
 .toggleSecret {
     position: absolute;
