--- a/stackgres-k8s/src/admin-ui/public/style.css
+++ b/stackgres-k8s/src/admin-ui/public/style.css
@@ -674,6 +674,11 @@ aside {
     position: absolute;
 }
 
+#sgVersion {
+    font-size: 12px;
+    letter-spacing: 1px;
+}
+
 #nav #logo svg {
     width: auto;
     height: auto;
